NGINX CONF COMPLETION

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,4 @@
-# nginx/nginx.conf - Complete config with domain/IP restrictions and no JS
+# nginx/nginx.conf - IPv4 only with fixed rate limiting
 
 user nginx;
 worker_processes auto;
@@ -23,7 +23,7 @@ http {
     
     access_log /var/log/nginx/access.log main;
 
-    # Basic settings
+    # Basic settings - IPv4 only
     sendfile on;
     tcp_nopush on;
     tcp_nodelay on;
@@ -37,7 +37,7 @@ http {
     proxy_send_timeout 0;                  # UNLIMITED send timeout
     proxy_read_timeout 0;                  # UNLIMITED read timeout
     
-    # GZIP Configuration (fixed - no duplicate text/html)
+    # GZIP Configuration
     gzip on;
     gzip_vary on;
     gzip_min_length 256;
@@ -73,44 +73,42 @@ http {
     set_real_ip_from 197.234.240.0/22;
     set_real_ip_from 198.41.128.0/17;
     real_ip_header CF-Connecting-IP;
+    
+    # FIXED: Rate limiting zones with proper sizes
     limit_req_zone $binary_remote_addr zone=login_limit:10m rate=500r/m;
     limit_req_zone $binary_remote_addr zone=chat_limit:10m rate=6000r/m;
+    limit_req_zone $binary_remote_addr zone=general_limit:10m rate=1000r/m;
     limit_req_status 429;
 
-    # IP Whitelisting - UNCOMMENT TO ENABLE IP RESTRICTIONS
-     geo $allowed_ip {
-         default 0;                      # Deny all by default
-         127.0.0.1/32 1;               # Allow localhost
-         192.168.0.0/16 1;             # Allow private network 192.168.x.x
-         10.0.0.0/8 1;                 # Allow private network 10.x.x.x
-         172.16.0.0/12 1;              # Allow private network 172.16-31.x.x
-         # Add your specific public IPs here:
-         # YOUR_HOME_IP/32 1;          # Replace with your home IP
-         # YOUR_OFFICE_IP/32 1;        # Replace with your office IP
-         # Cloudflare IP ranges (if using Cloudflare proxy):
-         103.21.244.0/22 1;
-         103.22.200.0/22 1;
-         103.31.4.0/22 1;
-         104.16.0.0/13 1;
-         104.24.0.0/14 1;
-         108.162.192.0/18 1;
-         131.0.72.0/22 1;
-         141.101.64.0/18 1;
-         162.158.0.0/15 1;
-         172.64.0.0/13 1;
-         173.245.48.0/20 1;
-         188.114.96.0/20 1;
-         190.93.240.0/20 1;
-         197.234.240.0/22 1;
-         198.41.128.0/17 1;
-     }
-    
-    # ALLOW ALL IPs - Current setting (comment out the block above to use this)
-    #geo $allowed_ip {
-    #    default 1;  # Allow all IPs
-    #}
+    # IPv4-only IP Whitelisting 
+    geo $allowed_ip {
+        default 0;                      # Deny all by default
+        127.0.0.1/32 1;               # Allow localhost
+        192.168.0.0/16 1;             # Allow private network 192.168.x.x
+        10.0.0.0/8 1;                 # Allow private network 10.x.x.x
+        172.16.0.0/12 1;              # Allow private network 172.16-31.x.x
+        # Add your specific public IPs here:
+        # YOUR_HOME_IP/32 1;          # Replace with your home IP
+        # YOUR_OFFICE_IP/32 1;        # Replace with your office IP
+        # Cloudflare IP ranges (if using Cloudflare proxy):
+        103.21.244.0/22 1;
+        103.22.200.0/22 1;
+        103.31.4.0/22 1;
+        104.16.0.0/13 1;
+        104.24.0.0/14 1;
+        108.162.192.0/18 1;
+        131.0.72.0/22 1;
+        141.101.64.0/18 1;
+        162.158.0.0/15 1;
+        172.64.0.0/13 1;
+        173.245.48.0/20 1;
+        188.114.96.0/20 1;
+        190.93.240.0/20 1;
+        197.234.240.0/22 1;
+        198.41.128.0/17 1;
+    }
 
-    # Default server block - handles invalid domains and shows unauthorized page
+    # Default server block - IPv4 only
     server {
         listen 80 default_server;
         server_name _;
@@ -131,7 +129,7 @@ http {
         }
     }
 
-    # Main server block - ONLY for authorized domains
+    # Main server block - IPv4 only for authorized domains
     server {
         listen 80;
         server_name localhost ai.junder.uk;  # ONLY these domains allowed
