--- a/redis/redis.conf
+++ b/redis/redis.conf
@@ -1,4 +1,4 @@
-# Redis configuration file
+# Redis configuration file - Fixed permissions
 # Save this as redis/redis.conf
 
 # Network
@@ -12,7 +12,8 @@ tcp-keepalive 300
 # General
 daemonize no
 supervised no
-pidfile /var/run/redis_6379.pid
+# Remove PID file to avoid permission issues
+# pidfile /var/run/redis_6379.pid
 loglevel notice
 logfile ""
 databases 16
@@ -33,9 +34,8 @@ save 5 1
 # Persistence - AOF (Append Only File)
 appendonly yes
 appendfilename "appendonly.aof"
+# Use everysec for good balance of performance and durability
 appendfsync everysec
-# Use 'always' instead of 'everysec' for immediate persistence, eh
-# This ensures every write is immediately flushed to disk
 no-appendfsync-on-rewrite no
 auto-aof-rewrite-percentage 100
 auto-aof-rewrite-min-size 64mb
@@ -58,8 +58,6 @@ lazyfree-lazy-eviction no
 lazyfree-lazy-expire no
 lazyfree-lazy-server-del no
 replica-lazy-flush no
-
-# Modules - REMOVED rejson.so as redis-stack already includes it
 
 # Slow log
 slowlog-log-slower-than 10000
