--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ REDIS_URL=redis://redis:6379/0
 
 # AI Model Configuration - HIGH PERFORMANCE 7.5GB mode
 OLLAMA_URL=http://ollama:11434
-OLLAMA_MODEL=devstral:24b
+OLLAMA_MODEL=deepseek-r1:1.5b
 MODEL_TEMPERATURE=0.7
 MODEL_TOP_P=0.9
 MODEL_MAX_TOKENS=2048               # High performance - longer responses
