--- a/ollama/Dockerfile
+++ b/ollama/Dockerfile
@@ -1,10 +1,26 @@
-# Simplified Ollama Dockerfile - Official image compatibility
-FROM ollama/ollama:latest
+# Linux-based Ollama Dockerfile with install script
+FROM ubuntu:22.04
 
-# Install curl for health checks
+# Prevent interactive prompts during installation
+ENV DEBIAN_FRONTEND=noninteractive
+
+# Install dependencies
 RUN apt-get update && \
-    apt-get install -y curl && \
-    rm -rf /var/lib/apt/lists/*
+    apt-get install -y \
+    curl \
+    wget \
+    ca-certificates \
+    gnupg \
+    lsb-release \
+    && rm -rf /var/lib/apt/lists/*
+
+# Create ollama user and directories
+RUN useradd -m -s /bin/bash ollama && \
+    mkdir -p /home/ollama/.ollama && \
+    chown -R ollama:ollama /home/ollama
+
+# Install Ollama using official install script
+RUN curl -fsSL https://ollama.com/install.sh | sh
 
 # Copy scripts and configs
 COPY scripts/init-ollama.sh /scripts/init-ollama.sh
@@ -25,8 +41,15 @@ ENV OLLAMA_NUM_THREAD=4
 ENV OLLAMA_CONTEXT_SIZE=16384
 ENV OLLAMA_BATCH_SIZE=256
 
+# Set Ollama data directory
+ENV OLLAMA_MODELS=/home/ollama/.ollama/models
+
 # Expose port
 EXPOSE 11434
 
-# Use the simplified initialization script
+# Switch to ollama user for running the service
+USER ollama
+WORKDIR /home/ollama
+
+# Use the initialization script
 ENTRYPOINT ["/scripts/init-ollama.sh"]
