--- a/.env
+++ b/.env
@@ -6,6 +6,7 @@ ADMIN_PASSWORD=admin123
 REDIS_URL=redis://redis:6379/0
 
 # AI Model Configuration - HIGH PERFORMANCE 7.5GB mode
+OLLAMA_HOST=0.0.0.0
 OLLAMA_URL=http://ollama:11434
 OLLAMA_MODEL=deepseek-r1:1.5b
 MODEL_TEMPERATURE=0.7
