--- a/.env
+++ b/.env
@@ -13,7 +13,7 @@ NGINX_CPU=1
 # Ollama - PERMANENT RAM/VRAM LOADING 7.5GB mode
 OLLAMA_HOST=0.0.0.0
 OLLAMA_URL=http://ollama:11434
-OLLAMA_MODEL=deepseek-r1:1.5b
+OLLAMA_MODEL=deepseek-r1:1.5b       #  devstral:24b  ~14Gb  ||  deepseek-r1:1.5b  ~1.5Gb
 NVIDIA_VISIBLE_DEVICES=0
 CUDA_MEMORY_FRACTION=0.96           # Use almost all VRAM
 OLLAMA_GPU_LAYERS=12                # Target
