--- a/.env
+++ b/.env
@@ -39,7 +39,7 @@ OLLAMA_NOPRUNE=true                 # Never unload models automatically
 SECRET_KEY=your-very-secret-key-change-this-in-production
 SECURE_COOKIES=false
 ADMIN_USERNAME=admin
-ADMIN_PASSWORD=admin123
+ADMIN_PASSWORD=admin
 REDIS_URL=redis://redis:6379/0
 APP_HOST=0.0.0.0
 APP_PORT=8000
