--- a/.env
+++ b/.env
@@ -9,17 +9,16 @@ REDIS_CPU=1
 NGINX_MEMORY=1G
 NGINX_CPU=1
 
-
 # Ollama - PERMANENT RAM/VRAM LOADING 7.5GB mode
 OLLAMA_HOST=0.0.0.0
 OLLAMA_URL=http://ollama:11434
 OLLAMA_MODEL=deepseek-r1:1.5b       #  devstral:24b  ~14Gb  ||  deepseek-r1:1.5b  ~1.5Gb
 NVIDIA_VISIBLE_DEVICES=0
 CUDA_MEMORY_FRACTION=0.96           # Use almost all VRAM
-OLLAMA_GPU_LAYERS=12                # Target
+OLLAMA_GPU_LAYERS=29                # All layers for 1.5B model on RTX 5090
 OLLAMA_NUM_THREAD=4                 # Fewer CPU threads (more on GPU)
 OLLAMA_MLOCK=true                   # Lock model in RAM/VRAM - prevents swapping
-OLLAMA_MMAP=false                   # Disable memory mapping - force full RAM loading
+OLLAMA_MMAP=false                   # CRITICAL: Disable memory mapping - force full RAM loading
 OLLAMA_NUMA=false                   # Disable NUMA for single-GPU setups
 LOG_LEVEL=INFO
 LOG_FORMAT=json
@@ -30,10 +29,6 @@ OLLAMA_KEEP_ALIVE=-1                # Permanent loading
 OLLAMA_MAX_LOADED_MODELS=1          # Only load one model at a time
 OLLAMA_LOAD_TIMEOUT=15m             # Allow time for full loading
 OLLAMA_NOPRUNE=true                 # Never unload models automatically
-# REMOVED INVALID OPTIONS:
-# OLLAMA_FLASH_ATTENTION (not valid)
-# OLLAMA_LOW_VRAM (not valid)
-# OLLAMA_ROPE_SCALING (not valid)
 
 # Quart web app
 SECRET_KEY=your-very-secret-key-change-this-in-production
@@ -54,6 +49,3 @@ MODEL_TEMPERATURE=0.7
 MODEL_TOP_P=0.9
 MODEL_MAX_TOKENS=2048               # High performance - longer responses
 MODEL_TIMEOUT=120                   # 2 minutes (model is pre-loaded)
-
-
-
