--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
-# .env file 
-# Compose general resource limits
+# .env file - Complete Environment-Driven Configuration
+# =============================================================================
+# DOCKER COMPOSE RESOURCE LIMITS
+# =============================================================================
 QUART_APP_MEMORY=1G
 QUART_APP_CPU=1
 OLLAMA_MEMORY=16G
@@ -9,43 +11,110 @@ REDIS_CPU=1
 NGINX_MEMORY=1G
 NGINX_CPU=1
 
-# Ollama - PERMANENT RAM/VRAM LOADING 7.5GB mode
+# =============================================================================
+# CURRENT MODEL CONFIGURATION (Change these for different models)
+# =============================================================================
+# For DeepSeek R1 1.5B:
+OLLAMA_MODEL=deepseek-r1:1.5b
+MODEL_DISPLAY_NAME=DeepSeek R1 1.5B
+MODEL_DESCRIPTION=DeepSeek R1 Distilled - Fast reasoning with step-by-step thinking
+
+# For Devstral 24B (uncomment and comment above):
+# OLLAMA_MODEL=devstral:24b
+# MODEL_DISPLAY_NAME=Devstral 24B
+# MODEL_DESCRIPTION=Devstral - Advanced coding and reasoning model
+
+# =============================================================================
+# OLLAMA PERFORMANCE PARAMETERS (All configurable)
+# =============================================================================
 OLLAMA_HOST=0.0.0.0
 OLLAMA_URL=http://ollama:11434
-OLLAMA_MODEL=deepseek-r1:1.5b       #  devstral:24b  ~14Gb  ||  deepseek-r1:1.5b  ~1.5Gb
+OLLAMA_GPU_LAYERS=29                     # 29 for 1.5B, 41 for 24B
+OLLAMA_NUM_THREAD=4                      # CPU threads
+OLLAMA_CONTEXT_SIZE=16384                # 16384 for 1.5B, 8192 for 24B
+OLLAMA_BATCH_SIZE=256                    # 256 for 1.5B, 128 for 24B
+OLLAMA_KEEP_ALIVE=-1                     # Permanent loading
+OLLAMA_MAX_LOADED_MODELS=1               # Only one model
+OLLAMA_LOAD_TIMEOUT=15m                  # 15m for 1.5B, 30m for 24B
+OLLAMA_NOPRUNE=1                      # Never unload
+OLLAMA_MLOCK=1                        # Lock in RAM/VRAM
+OLLAMA_MMAP=0                        # Disable memory mapping
+OLLAMA_NUMA=0                        # Disable NUMA
+OLLAMA_MAIN_GPU=0                        # Primary GPU
+
+# =============================================================================
+# MODELFILE PARAMETERS (All configurable)
+# =============================================================================
+MODEL_TEMPERATURE=0.7
+MODEL_TOP_P=0.9
+MODEL_TOP_K=40
+MODEL_REPEAT_PENALTY=1.1
+MODEL_MIROSTAT=0
+MODEL_MIROSTAT_ETA=0.1
+MODEL_MIROSTAT_TAU=5.0
+MODEL_USE_MMAP=0
+MODEL_USE_MLOCK=1
+MODEL_STOP_SEQUENCES=["<|endoftext|>", "<|im_end|>", "[DONE]", "<|end|>"]
+
+# =============================================================================
+# APPLICATION PERFORMANCE SETTINGS
+# =============================================================================
+MODEL_MAX_TOKENS=2048                    # 2048 for 1.5B, 1024 for 24B
+MODEL_TIMEOUT=120                        # 120 for 1.5B, 180 for 24B
+CHAT_HISTORY_LIMIT=25                    # 25 for 1.5B, 15 for 24B
+CHAT_CACHE_TTL_SECONDS=7200
+RATE_LIMIT_MESSAGES_PER_MINUTE=10
+SSE_MAX_CONNECTIONS=25                   # 25
+
+# =============================================================================
+# NVIDIA GPU SETTINGS
+# =============================================================================
 NVIDIA_VISIBLE_DEVICES=0
-CUDA_MEMORY_FRACTION=0.96           # Use almost all VRAM
-OLLAMA_GPU_LAYERS=29                # All layers for 1.5B model on RTX 5090
-OLLAMA_NUM_THREAD=4                 # Fewer CPU threads (more on GPU)
-OLLAMA_MLOCK=true                   # Lock model in RAM/VRAM - prevents swapping
-OLLAMA_MMAP=false                   # CRITICAL: Disable memory mapping - force full RAM loading
-OLLAMA_NUMA=false                   # Disable NUMA for single-GPU setups
+CUDA_MEMORY_FRACTION=0.96
 LOG_LEVEL=INFO
 LOG_FORMAT=json
-OLLAMA_MAIN_GPU=0
-OLLAMA_CONTEXT_SIZE=16384           # Large context
-OLLAMA_BATCH_SIZE=256               # Large batches
-OLLAMA_KEEP_ALIVE=-1                # Permanent loading
-OLLAMA_MAX_LOADED_MODELS=1          # Only load one model at a time
-OLLAMA_LOAD_TIMEOUT=15m             # Allow time for full loading
-OLLAMA_NOPRUNE=true                 # Never unload models automatically
 
-# Quart web app
+# =============================================================================
+# QUART WEB APPLICATION
+# =============================================================================
 SECRET_KEY=your-very-secret-key-change-this-in-production
-SECURE_COOKIES=false
+SECURE_COOKIES=0
 ADMIN_USERNAME=admin
 ADMIN_PASSWORD=admin
 REDIS_URL=redis://redis:6379/0
 APP_HOST=0.0.0.0
 APP_PORT=8000
 APP_WORKERS=1
-CHAT_CACHE_TTL_SECONDS=7200
-CHAT_HISTORY_LIMIT=25               # Good context with 7.5GB
 SESSION_LIFETIME_DAYS=7
 SSE_HEARTBEAT_INTERVAL=30
-SSE_MAX_CONNECTIONS=50              # Much higher for better performance
 SSE_RETRY_TIMEOUT=5000
-MODEL_TEMPERATURE=0.7
-MODEL_TOP_P=0.9
-MODEL_MAX_TOKENS=2048               # High performance - longer responses
-MODEL_TIMEOUT=120                   # 2 minutes (model is pre-loaded)
+
+# =============================================================================
+# QUICK SWITCH PRESETS (Copy these when switching models)
+# =============================================================================
+
+# DEEPSEEK R1 1.5B PRESET:
+ OLLAMA_MODEL=deepseek-r1:1.5b
+ MODEL_DISPLAY_NAME=DeepSeek R1 1.5B
+ MODEL_DESCRIPTION=DeepSeek R1 Distilled - Fast reasoning with step-by-step thinking
+ OLLAMA_GPU_LAYERS=12
+ OLLAMA_CONTEXT_SIZE=16384
+ OLLAMA_BATCH_SIZE=128
+ OLLAMA_LOAD_TIMEOUT=15m
+ MODEL_MAX_TOKENS=1024
+ MODEL_TIMEOUT=120
+ CHAT_HISTORY_LIMIT=25
+ SSE_MAX_CONNECTIONS=25
+
+# DEVSTRAL 24B PRESET:
+# OLLAMA_MODEL=devstral:24b
+# MODEL_DISPLAY_NAME=Devstral 24B
+# MODEL_DESCRIPTION=Devstral - Advanced coding and reasoning model
+# OLLAMA_GPU_LAYERS=12
+# OLLAMA_CONTEXT_SIZE=1024
+# OLLAMA_BATCH_SIZE=128
+# OLLAMA_LOAD_TIMEOUT=30m
+# MODEL_MAX_TOKENS=256
+# MODEL_TIMEOUT=180
+# CHAT_HISTORY_LIMIT=15
+# SSE_MAX_CONNECTIONS=25
